--- a/paid-subscribe/index.html
+++ b/paid-subscribe/index.html
@@ -234,7 +234,7 @@
                             <hr />
                                                         <div class="panel panel-default">
                                 <div class="panel-heading">
-                                    <a href="javascript:;" class="js_to" data-url="https://132.145.100.235/#/register?code=" data-type="Xingchen" data-code="biwOBZBq" target="_blank"><b>星辰机场</b></a>
+                                    <a href="javascript:;" class="js_to" data-url="https://a.xcvpn.me/#/register?code=" data-type="Xingchen" data-code="biwOBZBq" target="_blank"><b>星辰机场</b></a>
                                 </div>
                                 <div class="panel-body">
                                     <p>【包年送2个月】</p><p>1、购买入门版年付套餐额外送2个月，共14个月，只要99元！！！</p><p>2、购买“至尊天皇”年付套餐，额外送2个月，只要299元！！！</p><p>3、购买其他包月类套餐中的年付，同样送2个月！！！</p><p>错过要再等一年！！</p>
@@ -304,7 +304,7 @@
                                                                             </dl>
                                 </div>
                                 <div class="panel-footer">
-                                    <a href="javascript:;" class="js_to" data-url="https://132.145.100.235/#/register?code=" data-type="Xingchen" data-code="biwOBZBq" target="_blank">点击查看</a>
+                                    <a href="javascript:;" class="js_to" data-url="https://a.xcvpn.me/#/register?code=" data-type="Xingchen" data-code="biwOBZBq" target="_blank">点击查看</a>
                                 </div>
                             </div>
                             <hr />
@@ -539,16 +539,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-5-27-free-v2ray.htm" title="「5月27日」最高速度19.4M/S，2025年V2ray/Shadowrocket/SSR/Clash每天更新免费节点订阅链接">「5月27日」最高速度19.4M/S，2025年V2ray/Shadowrocket/SSR/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/news/article-110686.htm" title="Docker基础 — 36、CMD指令和ENTRYPOINT指令的区别">Docker基础 — 36、CMD指令和ENTRYPOINT指令的区别</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-19-free-v2ray.htm" title="「5月19日」最高速度20.2M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接">「5月19日」最高速度20.2M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-20-free-high-speed-nodes.htm" title="「5月20日」最高速度19.4M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接">「5月20日」最高速度19.4M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-11-free-v2ray.htm" title="「6月11日」最高速度20M/S，2025年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接">「6月11日」最高速度20M/S，2025年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-16-free-v2ray.htm" title="「5月16日」最高速度20.7M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接">「5月16日」最高速度20.7M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-12-free-subscribe-node.htm" title="「5月12日」最高速度22.1M/S，2025年Clash/V2ray/Shadowrocket/SSR每天更新免费节点订阅链接">「5月12日」最高速度22.1M/S，2025年Clash/V2ray/Shadowrocket/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-15-free-node-subscribe-links.htm" title="「6月15日」最高速度20.6M/S，2025年Clash/SSR/V2ray/Shadowrocket每天更新免费节点订阅链接">「6月15日」最高速度20.6M/S，2025年Clash/SSR/V2ray/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-110687.htm" title="猫粮生产工艺及设备有哪些厂家（猫粮加工设备及配方）">猫粮生产工艺及设备有哪些厂家（猫粮加工设备及配方）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-14-node-share.htm" title="「6月14日」最高速度20.9M/S，2025年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接">「6月14日」最高速度20.9M/S，2025年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-9-free-subscribe-node.htm" title="「5月9日」最高速度21.4M/S，2025年Shadowrocket/V2ray/Clash/SSR每天更新免费节点订阅链接">「5月9日」最高速度21.4M/S，2025年Shadowrocket/V2ray/Clash/SSR每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-6-2-free-v2ray.htm" title="「6月2日」最高速度18.3M/S，2025年Clash/SSR/V2ray/Shadowrocket每天更新免费节点订阅链接">「6月2日」最高速度18.3M/S，2025年Clash/SSR/V2ray/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-9-free-subscribe-node.htm" title="「6月9日」最高速度19.1M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接">「6月9日」最高速度19.1M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-6-7-clash-v2ray-ss-ssr.htm" title="「6月7日」最高速度18.1M/S，2025年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接">「6月7日」最高速度18.1M/S，2025年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-18-free-subscribe-node.htm" title="「5月18日」最高速度22.8M/S，2025年SSR/Clash/Shadowrocket/V2ray每天更新免费节点订阅链接">「5月18日」最高速度22.8M/S，2025年SSR/Clash/Shadowrocket/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-22-free-node-subscribe.htm" title="「5月22日」最高速度19M/S，2025年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接">「5月22日」最高速度19M/S，2025年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-8-node-share.htm" title="「6月8日」最高速度22.2M/S，2025年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接">「6月8日」最高速度22.2M/S，2025年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-30-free-v2ray-subscribe.htm" title="「5月30日」最高速度21.1M/S，2025年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接">「5月30日」最高速度21.1M/S，2025年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -560,7 +560,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">11</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
+                <h4><span class="badge" style="float: right;">16</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">33</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
